<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_oper1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_oper2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:background="@android:color/darker_gray"
        android:id="@+id/tv_result"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply"
        android:text="Apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>